@vitorvhsilva Navegação da Seção de Relaxamento

--- a/locales/pt-BR/common.json
+++ b/locales/pt-BR/common.json
@@ -1,1 +1,1 @@
-{"headerComoFunciona":"Como Funciona?","headerComunidade":"\nComunidade","headerFuncionalidades":"Funcionalidades\n","headerJogos":"Jogos","headerParceiros":"\nNossos parceiros","headerPsicoterapia":"Psicoterapia","headerSobreNos":"Sobre nós"}
+{"headerComoFunciona":"Como Funciona?","headerComunidade":"\nRelaxamento","headerFuncionalidades":"Funcionalidades\n","headerJogos":"Jogos","headerParceiros":"\nNossos parceiros","headerPsicoterapia":"Psicoterapia","headerSobreNos":"Sobre nós"}
