@vitorvhsilva Arrumando o i18next

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,1 +1,1 @@
-{"headerComoFunciona":"How it works?","headerComunidade":"\nCommunity","headerFuncionalidades":"Functionalities\n","headerJogos":"Games","headerParceiros":"\nOur partners","headerPsicoterapia":"Psychotherapy","headerSobreNos":"About Us"}
+{"headerComoFunciona":"How it works?","headerComunidade":"\nRelaxation","headerFuncionalidades":"Functionalities\n","headerJogos":"Games","headerParceiros":"\nOur partners","headerPsicoterapia":"Psychotherapy","headerSobreNos":"About Us"}
