@selingindev ~ tradulçao pacientes vinculados

--- a/locales/en/psicologoPaciente.json
+++ b/locales/en/psicologoPaciente.json
@@ -1,1 +1,1 @@
-{"pacientePsicologoPaciente":"Patients "}
+{"anosPacientesVinculados":" years","pacientePsicologoPaciente":"Patients ","pacienteTotalPsicologo":" Total:"}
