--- a/locales/fr/psicologoPaciente.json
+++ b/locales/fr/psicologoPaciente.json
@@ -1,1 +1,1 @@
-{"pacientePsicologoPaciente":"Les patients "}
+{"anosPacientesVinculados":" années","pacientePsicologoPaciente":"Les patients ","pacienteTotalPsicologo":" Total:"}
