--- a/locales/pt-BR/psicologoPaciente.json
+++ b/locales/pt-BR/psicologoPaciente.json
@@ -1,1 +1,5 @@
-{"pacientePsicologoPaciente":"Pacientes "}
+{
+  "anosPacientesVinculados": " anos",
+  "pacientePsicologoPaciente": "Pacientes ",
+  "pacienteTotalPsicologo": " Total:"
+}
