--- a/locales/es/psicologoPaciente.json
+++ b/locales/es/psicologoPaciente.json
@@ -1,1 +1,1 @@
-{"pacientePsicologoPaciente":"Pacientes "}
+{"anosPacientesVinculados":" años","pacientePsicologoPaciente":"Pacientes ","pacienteTotalPsicologo":" Total:"}
