@vitorvhsilva @APBielzinx Rotina do Usuário feita

--- a/locales/en/psicologoPaciente.json
+++ b/locales/en/psicologoPaciente.json
@@ -1,1 +1,1 @@
-{"pacientePsicologoPaciente":"Patients "}
+{"   abrirPerfilInfoPaciente":"Open profile","anosPacientesVinculados":" years","pacientePsicologoPaciente":"Patients ","pacienteTotalPsicologo":" Total:"}
