--- a/locales/es/psicologoPaciente.json
+++ b/locales/es/psicologoPaciente.json
@@ -1,1 +1,1 @@
-{"pacientePsicologoPaciente":"Pacientes "}
+{"   abrirPerfilInfoPaciente":"perfil abierto","anosPacientesVinculados":" años","pacientePsicologoPaciente":"Pacientes ","pacienteTotalPsicologo":" Total:"}
