--- a/locales/fr/psicologoPaciente.json
+++ b/locales/fr/psicologoPaciente.json
@@ -1,1 +1,1 @@
-{"pacientePsicologoPaciente":"Les patients "}
+{"   abrirPerfilInfoPaciente":"Ouvrir le profil","anosPacientesVinculados":" années","pacientePsicologoPaciente":"Les patients ","pacienteTotalPsicologo":" Total:"}
