--- a/locales/pt-BR/psicologoPaciente.json
+++ b/locales/pt-BR/psicologoPaciente.json
@@ -1,1 +1,1 @@
-{"pacientePsicologoPaciente":"Pacientes "}
+{"   abrirPerfilInfoPaciente":"Abrir perfil","anosPacientesVinculados":" anos","pacientePsicologoPaciente":"Pacientes ","pacienteTotalPsicologo":" Total:"}
